2005-08-29  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #313534
	* itip-formatter.c: (cal_opened_cb), (find_cal_opened_cb):
	Moved the code to display recur check box to cal_opened_cb.

2005-08-23  Not Zed  <NotZed@Ximian.com>

	* itip-view.c: add missing headers.

2005-08-21  Chenthill Palanisamy  <pchenthill@novell.com>

	* itip-formatter.c: 
	(update_attendee_status): removed the unwanted brackets.
	(format_itip_object): Applied the patch from
	Christian Kellner <Christian.Kellner@scalix.com> which
	fixes a memory leak and make deference of url
	much simpler.

2005-08-20  Carsten Guenther <carsten.guenther@scalix.com>

	* itip-formatter.c: (cal_opened_cb, final_cal_opened_cb):
	Put back in warning messages about calendar not being opened.

2005-08-18  Carsten Guenther <carsten.guenther@scalix.com>

	* itip-formatter.c: (update_attendee_status): NULL-terminate
	calls to e_error_run; fixed typos in if-statement; some code
	cleanup.
	(cal_opened_cb, final_cal_opened_cb): Removed unnecessary
	message about not being able to open the calendar.

2005-08-11  Dinesh Layek  <LDinesh@novell.com>

	Fixes #305627
	* itip-formatter.c: (format_itip_object): set the source calendar
	of an appointment from the url information of CamelFolder.

2005-08-09  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #307841
	* itip-formatter.c: (view_response_cb): Check
	if the transparency is set and if not set it as
	Opaque.

2005-07-27  Vivek Jain  <jvivek@novell.com>
	
	* itip-formatter.c : (update_item) 
	applied patch submitted by <tommi.komulainen@iki.fi>
	do not send "cid:" to get the part.
	check part for NULL before using it.
	(message_foreach_part): do nothing if part is NULL
	saves crash.
	**Fixes #272632

2005-07-20  Chenthill Palanisamy  <pchenthill@novell.com>

	* itip-formatter.c: (format_itip_object): Fixed a memory
	leak and a crash when start date does is not present.

2005-07-19  Chenthill Palanisamy  <pchenthill@novell.com>

	* itip-formatter.c: 